<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/include_topmenu"/>
    <!--原密码-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/original_pwd"
        android:textColor="#8E8E92"
        android:textSize="14dp"/>
    <EditText
        android:id="@+id/et_original_pwd"
        android:layout_centerVertical="true"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:background="@null"
        android:hint="@string/hint_input_original_pwd"
        android:drawableBottom="@mipmap/line_between_2px"
        android:singleLine="true"
        android:textColor="#1D1D26"
        android:textColorHint="#8E8E92"
        android:textSize="14dp"/>
    <!--新密码-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_pwd"
        android:textColor="#8E8E92"
        android:textSize="14dp"/>
    <EditText
        android:id="@+id/et_new_pwd"
        android:layout_centerVertical="true"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:background="@null"
        android:hint="@string/hint_input_new_pwd"
        android:drawableBottom="@mipmap/line_between_2px"
        android:singleLine="true"
        android:textColor="#1D1D26"
        android:textColorHint="#8E8E92"
        android:textSize="14dp"/>
    <!--确认新密码-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_new_pwd"
        android:textColor="#8E8E92"
        android:textSize="14dp"/>
    <EditText
        android:id="@+id/et_confrim_pwd"
        android:layout_centerVertical="true"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:hint="@string/hint_input_confrim_new_pwd"
        android:drawableBottom="@mipmap/line_between_2px"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="#1D1D26"
        android:textColorHint="#8E8E92"
        android:textSize="14dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_save"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            style="@style/BaseBtnStyle"
            android:text="@string/save_"/>
    </RelativeLayout>
</LinearLayout>