<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ios_dlg_bg" >

    <View
        android:id="@+id/view_line"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/text1"
        android:background="#dcdcdc" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/plean_login"
        android:textColor="@color/blue"
        android:textSize="14sp" />
    <!--账户名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="60dp"
            android:gravity="center"
            android:text="@string/account"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/view_et_username"
            android:inputType="phone"
            android:textSize="16sp"
            android:hint="@string/hint_input_accout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <!--密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="60dp"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/view_et_pwd"
            android:hint="@string/hint_input_pwd"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">
        <Button
            android:id="@+id/view_btn_cancel"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/view_btn_ok"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/confirm"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>