<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
        <include layout="@layout/include_topmenu"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_gravity="center"
                android:id="@+id/civ_avator"
                android:src="@mipmap/defaultavatar"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
        </FrameLayout>
    <!--昵称-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/nickname"
        android:textColor="#8E8E92"
        android:textSize="14dp"/>
    <EditText
        android:id="@+id/et_nickname"
        android:layout_centerVertical="true"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:hint="@string/hint_input_nickname"
        android:drawableBottom="@drawable/bg_edittext"
        android:singleLine="true"
        android:textColor="#1D1D26"
        android:textColorHint="#8E8E92"
        android:textSize="14dp"/>
    <!--密码-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textColor="#8E8E92"
        android:textSize="14dp"/>
    <EditText
        android:id="@+id/et_pwd"
        android:layout_centerVertical="true"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:background="@null"
        android:hint="@string/hint_input_pwd"
        android:drawableBottom="@drawable/bg_edittext"
        android:singleLine="true"
        android:textColor="#1D1D26"
        android:textColorHint="#8E8E92"
        android:textSize="14dp"/>
    <!--确认密码-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_password"
        android:textColor="#8E8E92"
        android:textSize="14dp"/>
    <EditText
        android:id="@+id/et_confrim_pwd"
        android:layout_centerVertical="true"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:hint="@string/hint_input_confrim_pwd"
        android:drawableBottom="@drawable/bg_edittext"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="#1D1D26"
        android:textColorHint="#8E8E92"
        android:textSize="14dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/bt_next"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            style="@style/BaseBtnStyle"
            android:text="@string/register"/>
        <LinearLayout
            android:id="@+id/ll_gologin"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="已有账户"
                android:textColor="#8E8E92"
                android:gravity="center_vertical"
                android:textSize="14dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/go_login"
                android:textColor="#1D1D26"
                android:textSize="14dp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>