<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:toggle="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/include_topmenu"/>
    <RelativeLayout
        android:id="@+id/rl_pwd_safe"
        android:background="@drawable/btn_wg_selector"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            style="@style/SettingStyle"
            android:drawableLeft="@mipmap/lock"
            android:text="@string/pwd_safe"/>
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow_right"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <ImageView
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/line_between20px"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            style="@style/SettingStyle"
            android:drawableLeft="@mipmap/setting1"
            android:text="@string/clear_cache"/>
        <TextView
            android:id="@+id/tv_cache"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <ImageView
        style="@style/Line_Style"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            style="@style/SettingStyle"
            android:drawableLeft="@mipmap/setting2"
            android:text="@string/current_wifi_play"/>
        <com.zcw.togglebutton.ToggleButton
            android:id="@+id/tb_toggle_wifi"
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="54dp"
            android:layout_height="30dp" >
        </com.zcw.togglebutton.ToggleButton>
    </RelativeLayout>
    <ImageView
        style="@style/Line_Style"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            style="@style/SettingStyle"
            android:drawableLeft="@mipmap/setting3"
            android:text="@string/notification"/>
        <com.zcw.togglebutton.ToggleButton
            android:id="@+id/tb_toggle_msg"
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="54dp"
            android:layout_height="30dp" >
        </com.zcw.togglebutton.ToggleButton>
    </RelativeLayout>
    <ImageView
        style="@style/Line_Style"/>
</LinearLayout>